fix: fixed scrollbar for options search

--- a/src/components/ui/input/SearchInput.module.scss
+++ b/src/components/ui/input/SearchInput.module.scss
@@ -34,7 +34,9 @@
 		}
 	}
 
-	.options {
+	.blockOptions {
+		display: flex;
+		flex-direction: column;
 		position: absolute;
 		box-sizing: border-box;
 		top: 70px;
@@ -44,45 +46,48 @@
 		background-color: #ffffff;
 		border-radius: 30px;
 		z-index: 1;
-		overflow: auto;
-		overflow-y: auto;
 
-		&::-webkit-scrollbar {
-			width: 10px;
-		}
+		.options {
+			overflow: auto;
 
-		/* Track */
-		&::-webkit-scrollbar-track {
-			background: #f8f8f7;
-		}
+			&::-webkit-scrollbar {
+				width: 10px;
+			}
 
-		/* Handle */
-		&::-webkit-scrollbar-thumb {
-			background: #fbe0dc;
-			border-radius: 15px;
-		}
+			/* Track */
+			&::-webkit-scrollbar-track {
+				background: #f8f8f7;
+			}
 
-		/* Handle on hover */
-		&::-webkit-scrollbar-thumb:hover {
-			background: #ff868e;
-		}
+			/* Handle */
+			&::-webkit-scrollbar-thumb {
+				background: #fbe0dc;
+				border-radius: 15px;
+			}
 
-		&:scrollrad {
-			background: #ff868e;
-		}
+			/* Handle on hover */
+			&::-webkit-scrollbar-thumb:hover {
+				background: #ff868e;
+			}
 
-		ul {
-			color: #8c8c8c;
-			line-height: 24px;
-			font-size: 16px;
-			direction: ltr;
+			&:scrollrad {
+				background: #ff868e;
+			}
 
-			li {
-				padding: 3px 5px;
-				border-radius: 10px;
-				cursor: pointer;
-				&:hover {
-					@include btnHover;
+			ul {
+				color: #8c8c8c;
+				line-height: 24px;
+				font-size: 16px;
+				direction: ltr;
+				padding-right: 15px;
+
+				li {
+					padding: 3px 5px;
+					border-radius: 10px;
+					cursor: pointer;
+					&:hover {
+						@include btnHover;
+					}
 				}
 			}
 		}
